--- a/laboratory-parent/laboratory-common/src/main/resources/log4j.properties
+++ b/laboratory-parent/laboratory-common/src/main/resources/log4j.properties
@@ -108,25 +108,25 @@
 
 #OFF,systemOut,logFile,logDailyFile,logRollingFile,logMail,logDB,ALL
 #log4j.rootLogger=ALL,systemOut,logFile,logDailyFile,logRollingFile,logMail,logDB
-log4j.rootLogger=ALL,systemOut
+log4j.rootLogger=ALL,systemOut,logFile
 
 #输出到控制台 
 log4j.appender.systemOut= org.apache.log4j.ConsoleAppender
 log4j.appender.systemOut.layout= org.apache.log4j.PatternLayout
 #log4j.appender.systemOut.layout.ConversionPattern= [%-5p][%-22d{yyyy/MM/dd HH:mm:ssS}][%l]%n%m%n
 log4j.appender.systemOut.layout.ConversionPattern= [%-5p][%-22d{yyyy/MM/dd HH:mm:ssS}]%m%n
-log4j.appender.systemOut.Threshold= DEBUG
+log4j.appender.systemOut.Threshold= INFO
 log4j.appender.systemOut.ImmediateFlush= TRUE
 log4j.appender.systemOut.Target= System.out
 
 #输出到文件 
 log4j.appender.logFile= org.apache.log4j.FileAppender
 log4j.appender.logFile.layout= org.apache.log4j.PatternLayout
-log4j.appender.logFile.layout.ConversionPattern= [%-5p][%-22d{yyyy/MM/dd HH:mm:ssS}][%l]%n%m%n
+log4j.appender.logFile.layout.ConversionPattern= [%-5p][%-22d{yyyy/MM/dd HH:mm:ssS}][%l]%m%n
 log4j.appender.logFile.Threshold= DEBUG
 log4j.appender.logFile.ImmediateFlush= TRUE
 log4j.appender.logFile.Append= TRUE
-log4j.appender.logFile.File= ../Struts2/WebRoot/log/File/log4j_Struts.log
+log4j.appender.logFile.File= com.arki.laboratory.log
 log4j.appender.logFile.Encoding= UTF-8
 
 #按DatePattern输出到文件 
