--- a/laboratory-parent/pom.xml
+++ b/laboratory-parent/pom.xml
@@ -14,6 +14,7 @@
         <module>laboratory-snippet</module>
         <module>laboratory-crawler</module>
         <module>laboratory-servlet</module>
+        <module>laboratory-spring</module>
     </modules>
 
 
