--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # https://git-scm.com/docs/gitignore
 
+# Mac system file
+.DS_Store
+
 # IntelliJ project files
 .idea
 *.iml
@@ -7,3 +10,4 @@ out/
 
 # Maven files
 target/
+
