--- a/laboratory-parent/laboratory-spring/laboratory-portal/src/main/webapp/WEB-INF/web.xml
+++ b/laboratory-parent/laboratory-spring/laboratory-portal/src/main/webapp/WEB-INF/web.xml
@@ -22,10 +22,11 @@
             <param-name>contextConfigLocation</param-name>
             <param-value>/WEB-INF/springmvc-servlet.xml</param-value>
         </init-param>
+        <load-on-startup>1</load-on-startup>
     </servlet>
     <servlet-mapping>
         <servlet-name>springmvc</servlet-name>
-        <url-pattern>/*</url-pattern>
+        <url-pattern>/helloworld/*</url-pattern>
     </servlet-mapping>
 
 
