--- a/laboratory-parent/laboratory-spring/laboratory-portal/src/main/webapp/WEB-INF/web.xml
+++ b/laboratory-parent/laboratory-spring/laboratory-portal/src/main/webapp/WEB-INF/web.xml
@@ -2,10 +2,20 @@
 <web-app version="3.0" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee                       http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
 
 
+    <filter>
+        <filter-name>LogFilter</filter-name>
+        <filter-class>com.arki.portal.filter.LogFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>LogFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+
     <!-- Spring configuration -->
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>/WEB-INF/applicationContext.xml</param-value>
+        <param-value>classpath*:applicationContext.xml</param-value>
     </context-param>
 
     <listener>
@@ -20,7 +30,7 @@
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <init-param>
             <param-name>contextConfigLocation</param-name>
-            <param-value>/WEB-INF/springmvc-servlet.xml</param-value>
+            <param-value>classpath*:springmvc-servlet.xml</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
