--- a/laboratory-parent/laboratory-spring/laboratory-portal/src/main/webapp/WEB-INF/web.xml
+++ b/laboratory-parent/laboratory-spring/laboratory-portal/src/main/webapp/WEB-INF/web.xml
@@ -36,7 +36,43 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>springmvc</servlet-name>
-        <url-pattern>/helloworld/*</url-pattern>
+        <url-pattern>/</url-pattern>
+    </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>default</servlet-name>
+        <url-pattern>*.html</url-pattern>
+        <!--<url-pattern>*.css</url-pattern>
+        <url-pattern>*.js</url-pattern>
+        <url-pattern>*.ico</url-pattern>
+        <url-pattern>*.swf</url-pattern>
+        <url-pattern>*.gif</url-pattern>
+        <url-pattern>*.jpeg</url-pattern>
+        <url-pattern>*.bmp</url-pattern>
+        <url-pattern>*.psd</url-pattern>
+        <url-pattern>*.jpg</url-pattern>
+        <url-pattern>*.png</url-pattern>
+        <url-pattern>*.htm</url-pattern>
+        <url-pattern>*.html</url-pattern>
+        <url-pattern>*.crx</url-pattern>
+        <url-pattern>*.xpi</url-pattern>
+        <url-pattern>*.exe</url-pattern>
+        <url-pattern>*.ocx</url-pattern>
+        <url-pattern>*.cab</url-pattern>
+        <url-pattern>*.inf</url-pattern>
+        <url-pattern>*.ipa</url-pattern>
+        <url-pattern>*.apk</url-pattern>
+        <url-pattern>*.properties</url-pattern>
+        <url-pattern>*.bcmap</url-pattern>
+        <url-pattern>*.htc</url-pattern>
+        <url-pattern>*.json</url-pattern>
+        <url-pattern>*.woff</url-pattern>
+        <url-pattern>*.svg</url-pattern>
+        <url-pattern>*.otf</url-pattern>
+        <url-pattern>*.eot</url-pattern>
+        <url-pattern>*.ttf</url-pattern>
+        <url-pattern>*.xml</url-pattern>
+        <url-pattern>*.woff2</url-pattern>-->
     </servlet-mapping>
 
 
