--- a/laboratory-parent/laboratory-snippet/pom.xml
+++ b/laboratory-parent/laboratory-snippet/pom.xml
@@ -22,6 +22,13 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/cglib/cglib -->
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>3.2.6</version>
+        </dependency>
     </dependencies>
 
 
