--- a/laboratory-parent/laboratory-spring/laboratory-portal/pom.xml
+++ b/laboratory-parent/laboratory-spring/laboratory-portal/pom.xml
@@ -12,6 +12,9 @@
     <artifactId>laboratory-portal</artifactId>
     <packaging>war</packaging>
 
+    <build>
+        <finalName>arkizh</finalName>
+    </build>
 
 
 </project>
