--- a/laboratory-parent/laboratory-spring/laboratory-portal/src/main/resources/log4j.properties
+++ b/laboratory-parent/laboratory-spring/laboratory-portal/src/main/resources/log4j.properties
@@ -108,7 +108,7 @@
 
 #OFF,systemOut,logFile,logDailyFile,logRollingFile,logMail,logDB,ALL
 #log4j.rootLogger=ALL,systemOut,logFile,logDailyFile,logRollingFile,logMail,logDB
-log4j.rootLogger=ALL,systemOut,logFile
+log4j.rootLogger=DEBUG,systemOut,logFile
 
 #输出到控制台 
 log4j.appender.systemOut= org.apache.log4j.ConsoleAppender
@@ -126,7 +126,7 @@ log4j.appender.logFile.layout.ConversionPattern= [%-5p][%-22d{yyyy/MM/dd HH:mm:s
 log4j.appender.logFile.Threshold= DEBUG
 log4j.appender.logFile.ImmediateFlush= TRUE
 log4j.appender.logFile.Append= TRUE
-log4j.appender.logFile.File= laboratory-portal.log
+log4j.appender.logFile.File= /var/log/webapp/arkizh/laboratory-portal.log
 log4j.appender.logFile.Encoding= UTF-8
 
 #按DatePattern输出到文件 
