--- a/laboratory-springbootbased/laboratory-eurekaserver/src/main/resources/application.properties
+++ b/laboratory-springbootbased/laboratory-eurekaserver/src/main/resources/application.properties
@@ -1,4 +1,9 @@
+#服务名
+spring.application.name=eureka-server
+
+#不向注册中心注册自己
 eureka.client.register-with-eureka=false
+#不检索注册中心的服务
 eureka.client.fetch-registry=false
 #spring.profiles.active=peer1
 
@@ -9,4 +14,8 @@ target.registry.ip=127.0.0.1
 target.registry.port=8100
 #default properties end
 
+#注册中心的地址
 eureka.client.serviceUrl.defaultZone=http://${target.registry.ip}:${target.registry.port}/eureka/
+
+#关闭自我保护机制
+eureka.server.enable-self-preservation=false
