--- a/laboratory-springbootbased/laboratory-ribbonconsumer/src/main/resources/application.properties
+++ b/laboratory-springbootbased/laboratory-ribbonconsumer/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.application.name=ribbon-consumer
 target.registry.ip=peer1
 target.registry.port=8101
 eureka.client.serviceUrl.defaultZone=http://${target.registry.ip}:${target.registry.port}/eureka/
+
+#注册中心缓存清单的更新时间
+eureka.client.registry-fetch-interval-seconds=20
