--- a/laboratory-springbootbased/laboratory-serviceprovider/src/main/resources/application.properties
+++ b/laboratory-springbootbased/laboratory-serviceprovider/src/main/resources/application.properties
@@ -6,4 +6,14 @@ application.fullName=${application.artifact}_${application.version} by ${applica
 spring.profiles.active=provider1
 
 spring.application.name=providertest
+
+
+#服务续约任务的调用间隔时间，单位s，默认30
+eureka.instance.lease-renewal-interval-in-seconds=10
+#服务失效的时间，单位s，默认90
+eureka.ins七ance.lease-expiration-duration-in-seconds=60
+
+#指定Zones，可多个，以逗号分隔
+#eureka.client.availability-zones=
+#默认Zones，可多个，以逗号分隔，没有扫描到availability-zones时使用defaultZone
 eureka.client.serviceUrl.defaultZone=http://${target.registry.ip}:${target.registry.port}/eureka/
