--- a/laboratory-springbootbased/laboratory-serviceprovider/src/main/resources/application.properties
+++ b/laboratory-springbootbased/laboratory-serviceprovider/src/main/resources/application.properties
@@ -1,3 +1,8 @@
+
+#启动同一服务的多个实例简单方法：
+#1 通过设置server.port=0 或者使用随机数server.port=${randorn.int[10000,19999]} 来让Tomcat启动的时候采用随机端口
+#2 同时设置eureka.instance.instanceid=${spring.application.name}:${random.int}} 来解决实例名冲突
+
 application.artifact=laboratory-serviceprovider-${server.port}
 application.groupId=com.arki
 application.version=1.0
