Add service provider to validate jwt.

--- a/laboratory-springbootbased/pom.xml
+++ b/laboratory-springbootbased/pom.xml
@@ -14,5 +14,6 @@
 		<module>laboratory-serviceprovider</module>
 		<module>laboratory-ribbonconsumer</module>
 		<module>laboratory-authority-jwt</module>
-	</modules>
+        <module>laboratory-serviceprovider-jwt</module>
+    </modules>
 </project>
