--- a/laboratory-springbootbased/laboratory-springboot/pom.xml
+++ b/laboratory-springbootbased/laboratory-springboot/pom.xml
@@ -47,6 +47,12 @@
 			<artifactId>sentinel-annotation-aspectj</artifactId>
 			<version>1.3.0-GA</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.alibaba.csp/sentinel-parameter-flow-control -->
+		<dependency>
+			<groupId>com.alibaba.csp</groupId>
+			<artifactId>sentinel-parameter-flow-control</artifactId>
+			<version>1.3.0-GA</version>
+		</dependency>
 		<!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
 		<dependency>
 			<groupId>com.alibaba</groupId>
