--- a/laboratory-parent/laboratory-snippet/pom.xml
+++ b/laboratory-parent/laboratory-snippet/pom.xml
@@ -135,6 +135,14 @@
             <version>1.3.0-GA</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.apache.zookeeper/zookeeper -->
+        <dependency>
+            <groupId>org.apache.zookeeper</groupId>
+            <artifactId>zookeeper</artifactId>
+            <version>3.5.0-alpha</version>
+        </dependency>
+
+
     </dependencies>
 
 
