--- a/laboratory-springbootbased/laboratory-springcloud-config-server/src/main/resources/application.yml
+++ b/laboratory-springbootbased/laboratory-springcloud-config-server/src/main/resources/application.yml
@@ -13,13 +13,15 @@ spring:
           timeout: 4 # the time, in seconds, that the configuration server will wait to acquire an HTTP connection.
           basedir: C:/workspace/WorkBench/SpringCloudConfigLocal #files are checked out or cloned to the this directory
           cloneOnStart: true #clone the remote repositories at startup. By default, triggered when configuration is first requested
+          searchPaths: searchDirA,searchDirB*,searchDirC/searchDirA,appConfig/{application}/{profile} #search for config files in the top level directory and in the specified sub-directory
+          #这个searchPaths配置会扫描uri的根目录、其下searDirA文件夹、searchDirB*文件夹、searchDirC/searchDirA文件夹、appConfig/{应用名}/{profile}文件夹
           repos:
-            simple: file:///C:/workspace/WorkBench/SpringCloudConfigDir/simple
+            simple: file:///C:/workspace/WorkBench/SpringCloudConfigDir/simple # pattern: simple/*
             special:
               pattern: special*/dev*,*special*/dev*
               uri: file:///C:/workspace/WorkBench/SpringCloudConfigDir/special
             local:
-              pattern: local*
+              pattern: local* # pattern: local*/*
               uri: file:///C:/workspace/WorkBench/SpringCloudConfigDir/local
             development:
               pattern:
