Doing. Test rabbitMQ connection.

--- a/laboratory-springbootbased/laboratory-springboot/src/main/resources/application.properties
+++ b/laboratory-springbootbased/laboratory-springboot/src/main/resources/application.properties
@@ -4,3 +4,9 @@ application.version=1.0
 application.fullName=${application.artifact}_${application.version} by ${application.groupId}
 
 spring.profiles.active=dev
+
+#RabbitMQ\u914D\u7F6E
+spring.rabbitmq.host=192.168.3.4
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=admin
+spring.rabbitmq.password=123456
