--- a/laboratory-springbootbased/laboratory-springboot/pom.xml
+++ b/laboratory-springbootbased/laboratory-springboot/pom.xml
@@ -41,6 +41,11 @@
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
+		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/com.alibaba.csp/sentinel-annotation-aspectj -->
 		<dependency>
 			<groupId>com.alibaba.csp</groupId>
