--- a/laboratory-springbootbased/laboratory-springboot/src/main/resources/application.properties
+++ b/laboratory-springbootbased/laboratory-springboot/src/main/resources/application.properties
@@ -6,7 +6,7 @@ application.fullName=${application.artifact}_${application.version} by ${applica
 spring.profiles.active=dev
 
 #RabbitMQ\u914D\u7F6E
-spring.rabbitmq.host=192.168.3.4
+spring.rabbitmq.host=192.168.222.141
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=admin
-spring.rabbitmq.password=123456
+spring.rabbitmq.password=admin
