--- a/laboratory-springbootbased/laboratory-springcloud-config-server/src/main/resources/application.yml
+++ b/laboratory-springbootbased/laboratory-springcloud-config-server/src/main/resources/application.yml
@@ -40,3 +40,9 @@ spring:
                 - '*/qa'
                 - '*/production'
               uri: file:///C:/workspace/WorkBench/SpringCloudConfigDir/production
+  application:
+    name: configServer
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://127.0.0.1:8100/eureka/
