--- a/laboratory-springbootbased/laboratory-springcloud-config-client/pom.xml
+++ b/laboratory-springbootbased/laboratory-springcloud-config-client/pom.xml
@@ -24,6 +24,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
+        <!--<spring-cloud.version>Greenwich.M3</spring-cloud.version>-->
         <spring-cloud.version>Finchley.SR2</spring-cloud.version>
     </properties>
 
@@ -37,6 +38,29 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            <!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-stream -->
+            <!--<dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-stream</artifactId>
+                <version>1.3.3.RELEASE</version>
+            </dependency>-->
+            <!-- https://mvnrepository.com/artifact/org.springframework.integration/spring-integration-core -->
+            <!--<dependency>
+                <groupId>org.springframework.integration</groupId>
+                <artifactId>spring-integration-core</artifactId>
+                <version>4.3.14.RELEASE</version>
+            </dependency>-->
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-bus</artifactId>
+                <version>2.1.0.M2</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-stream</artifactId>
+                <version>2.1.0.RC2</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
@@ -58,6 +82,20 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-bus-amqp</artifactId>
+            <!--<exclusions>
+                <exclusion>
+                    <artifactId>spring-cloud-bus</artifactId>
+                    <groupId>org.springframework.cloud</groupId>
+                </exclusion>
+            </exclusions>-->
+        </dependency>
     </dependencies>
 
     <build>
@@ -68,4 +106,16 @@
             </plugin>
         </plugins>
     </build>
+
+
+    <repositories>
+        <repository>
+            <id>spring-milestones</id>
+            <name>Spring Milestones</name>
+            <url>https://repo.spring.io/milestone</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
 </project>
