Integrate spring cloud config, eureka and bus.

--- a/laboratory-springbootbased/laboratory-springcloud-config-client/src/main/resources/application.properties
+++ b/laboratory-springbootbased/laboratory-springcloud-config-client/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 #\u4F7F\u7528yml\u8868\u8FBE\u4E0D\u4E86\u8FD9\u4E2A\u8BED\u4E49
-#management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.include=*
