--- a/laboratory-parent/laboratory-spring/laboratory-portal/pom.xml
+++ b/laboratory-parent/laboratory-spring/laboratory-portal/pom.xml
@@ -16,5 +16,44 @@
         <finalName>arkizh</finalName>
     </build>
 
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <!-- Spring dependency begin -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>commons-logging</groupId>
+                    <artifactId>commons-logging</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+        </dependency>
+
+        <!-- Spring dependency end -->
+
+        <!-- Log configuration for spring begin -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jcl-over-slf4j</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.arki</groupId>
+            <artifactId>laboratory-common</artifactId>
+        </dependency>
+        <!-- Log configuration for spring end -->
+
+    </dependencies>
 
 </project>
