--- a/laboratory-springbootbased/laboratory-ribbonconsumer/src/main/resources/application.properties
+++ b/laboratory-springbootbased/laboratory-ribbonconsumer/src/main/resources/application.properties
@@ -6,3 +6,13 @@ eureka.client.serviceUrl.defaultZone=http://${target.registry.ip}:${target.regis
 
 #注册中心缓存清单的更新时间
 eureka.client.registry-fetch-interval-seconds=20
+
+#设置日志级别
+logging.level.org.springframework.cloud.sleuth=DEBUG
+
+#设置日志跟踪抽样比例
+#spring.sleuth.web.client.enabled=true
+#将采样比例设置为 1.0，也就是全部都需要。默认是 0.1 不好使
+spring.sleuth.sampler.probability=1.0
+# 指定了 Zipkin 服务器的地址
+spring.zipkin.base-url=http://localhost:9411/
