--- a/laboratory-springbootbased/laboratory-serviceprovider/pom.xml
+++ b/laboratory-springbootbased/laboratory-serviceprovider/pom.xml
@@ -52,6 +52,11 @@
 			<artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-sleuth</artifactId>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
