--- a/laboratory-springbootbased/laboratory-serviceprovider/src/main/resources/application.properties
+++ b/laboratory-springbootbased/laboratory-serviceprovider/src/main/resources/application.properties
@@ -22,3 +22,6 @@ eureka.instance.lease-expiration-duration-in-seconds=60
 #eureka.client.availability-zones=
 #默认Zones，可多个，以逗号分隔，没有扫描到availability-zones时使用defaultZone
 eureka.client.serviceUrl.defaultZone=http://${target.registry.ip}:${target.registry.port}/eureka/
+
+# 指定了 Zipkin 服务器的地址
+spring.zipkin.base-url=http://localhost:9411/
