--- a/laboratory-parent/pom.xml
+++ b/laboratory-parent/pom.xml
@@ -9,14 +9,14 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
-    <modules>
+<!--    <modules>
         <module>laboratory-common</module>
         <module>laboratory-snippet</module>
         <module>laboratory-crawler</module>
         <module>laboratory-servlet</module>
         <module>laboratory-spring</module>
         <module>laboratory-activemq</module>
-    </modules>
+    </modules>-->
 
 
     <dependencyManagement>
@@ -51,6 +51,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
                 <configuration>
                     <source>1.7</source>
                     <target>1.7</target>
