--- a/laboratory-parent/laboratory-snippet/pom.xml
+++ b/laboratory-parent/laboratory-snippet/pom.xml
@@ -157,7 +157,11 @@
             <version>2.3.2</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>com.drewnoakes</groupId>
+            <artifactId>metadata-extractor</artifactId>
+            <version>2.11.0</version>
+        </dependency>
 
     </dependencies>
 
