--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,11 @@ out/
 # Maven files
 target/
 
+# HBuilder file
+.project
 
-#react start
+
+#+++++++++++++++react start
 # dependencies
 node_modules/
 
@@ -31,10 +34,10 @@ build/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-#react end
+#---------------react end
 
 
-#springboot start
+#+++++++++++++++springboot start
 /target/
 !.mvn/wrapper/maven-wrapper.jar
 
@@ -59,4 +62,4 @@ yarn-error.log*
 /nbdist/
 /.nb-gradle/
 .mvn/
-#springboot end
+#---------------springboot end
